<resources>
    <string name="app_name">Kawaii Egg Timer</string>
    <string name="eggimage">EggImage</string>
    <string name="play_button">play stop button</string>
    <string name="stop_button">stop button</string>
    <string name="min00">00</string>
    <string name="colan">:</string>
    <string name="sec00">30</string>
    <string name="zero">0</string>
    <string name="_10">10</string>
    <string name="_0_30">0:30</string>
</resources>
